--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ numpy = "^1.22.3"
 scikit-learn = "^1.0.2"
 click = "^7.1.2"
 PyYAML = "5.4.1"
+fastapi = "0.78.0"
+uvicorn = "0.17.6"
+requests = "2.25.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
